# Solvable-Minesweeper

./: .gitignore  CONTRIBUTING.md  LICENSE  Metaminesweeper.iss  README.md  README_EN.md  build.bat  init.bat  plugin-dev-tutorial.md  pyproject.toml  pytest.ini  requirements.txt  协议
.claude/agents/: build-release-expert.agent.md  comm-expert.agent.md  game-core-expert.agent.md  game-program-expert.agent.md  git-expert.agent.md  gui-expert.agent.md  plugin-dev-expert.agent.md  plugin-program-expert.agent.md  project-manager.agent.md  review-expert.agent.md
.github/workflows/: python-app.yml
.opencode/: instructions.md
package_tool/: Metaminesweeper.iss  hook-debugpy-pyinstaller.py  randomize_cat_icon.py  setup.py
skills/plugin-dev/: SKILL.md
src/: CheckUpdateGui.py  captureScreen.py  distribution.py  gameAbout.py  gameAdvancedSettings.py  gameDefinedParameter.py  gameRecordPop.py  gameScoreBoard.py  gameScores.py  gameSettingShortcuts.py  gameSettings.py  gen_plugin.py  history_gui.py  main.py  mainWindowGUI.py  mainWindowGUIImportExport.py  mineSweeperGUI.py  mineSweeperGUIEvent.py  mineSweeperVideoPlayer.py  minesweeper_master.py  pluginDialog.py  run_plugin_manager.py  safe_eval.py  superGUI.py  utils.py  videoControl.py
src/ui/: de_DE.ts  (+18 more)
tests/: __init__.py  conftest.py  test_engine.py  test_safe_eval.py  test_utils.py  test_xian_ni_upgrade.py
uiFiles/: main_board.ui  ui_about.ui  ui_advanced.ui  ui_defined_parameter.ui  ui_gs.ui  ui_gs_shortcuts.ui  ui_import.ui  ui_mine_num_bar.ui  ui_record_pop.ui  ui_score_board.ui  ui_video_control.ui  ui转py.bat
(+151 files in other folders)
